--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "My personal Bolg"
+title: "My personal Blog"
 description: "A Jekyll Blog Theme For Hackers"
 author:
   name: "Nirmit Shah"
