--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,13 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
+gems:
+  - jekyll-seo-tag
+  - jekyll-paginate
+  - jekyll-sitemap
+  
 # Custom variables
 owner : "naughtyboy191"
 year : "2020"
+
+
